# chat-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/: chat_agent.py  simple_agent.py
src/agent_test/: __init__.py  models.py  utils.py
src/chat/: config.py  llm_client.py  message_handler.py  models.py  workflow.py
src/cli/: chat_runner.py
tests/: __init__.py  test_models.py  test_utils.py
tests/integration/: __init__.py
tests/integration/chat/: __init__.py  test_chat_flow.py
tests/unit/chat/: __init__.py  test_config.py  test_llm_client.py  test_message_handler.py  test_models.py  test_workflow.py
tests/unit/cli/: test_chat_runner.py
